tests/baselines/reference/ExportFunctionWithInaccessibleTypesInParameterTypeAnnotation.errors.txt
==== tests/cases/compiler/ExportFunctionWithInaccessibleTypesInParameterTypeAnnotation.ts (5 errors) ====
    module A {
    
        class Point {
            x: number;
            y: number;
        }
    
        export class Line {
            constructor(public start: Point, public end: Point) { }
                        ~~~~~~~~~~~~~~~~~~~
!!! error TS2025: Public property 'start' of exported class has or is using private type 'Point'.
                        ~~~~~~~~~~~~~~~~~~~
!!! error TS2032: Parameter 'start' of constructor from exported class has or is using private type 'Point'.
                                             ~~~~~~~~~~~~~~~~~
!!! error TS2025: Public property 'end' of exported class has or is using private type 'Point'.
                                             ~~~~~~~~~~~~~~~~~
!!! error TS2032: Parameter 'end' of constructor from exported class has or is using private type 'Point'.
        }
    
        export function fromOrigin(p: Point): Line {
                                   ~~~~~~~~
!!! error TS2040: Parameter 'p' of exported function has or is using private type 'Point'.
            return new Line({ x: 0, y: 0 }, p);
        }
    }